--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - bundle:/usr/local/bundle
     environment:
       - RAILS_ENV=development
+      - APP_DEFAULT_URL_HOST=localhost
+      - APP_DEFAULT_URL_PORT=3000
     depends_on:
       - mysql
     links:
